<resources>
    <string name="app_name">Travanda</string>

    <!-- Login -->
    <string name="email_input">Email</string>
    <string name="password_input">Password</string>
    <string name="button_login">LOGIN</string>

    <!-- Sign Up -->
    <string name="username_input">Username</string>
    <string name="button_signup">SIGN UP</string>

    <!-- Forgot Password -->
    <string name="info_enter_email">Please enter your email here</string>
    <string name="button_submit_email">Submit</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="button_move_login">BACK LOGIN</string>
</resources>
