<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/info_enter_email"
                  android:fontFamily="@font/proxima_nova"
                  android:textStyle="bold"
                  android:textSize="20sp"/>
        <android.support.design.widget.TextInputLayout
                android:id="@+id/inputlayout_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp">
            <EditText
                    android:id="@+id/et_email_input"
                    android:layout_width="300dp"
                    android:layout_height="60dp"
                    android:drawableLeft="@drawable/ic_email_blue_24dp"
                    android:hint="@string/email_input"
                    android:textAllCaps="false"
                    android:textColorHint="@color/textHintGrey"
                    android:fontFamily="@font/proxima_nova"
                    android:drawablePadding="5dp"
                    android:inputType="textEmailAddress"
                    android:textSize="18sp"/>
            <Button
                    android:id="@+id/btn_submit_email"
                    android:layout_marginTop="10dp"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:background="@drawable/button_login_action"
                    android:text="@string/button_submit_email"
                    android:textColor="@color/textBlack"
                    android:fontFamily="@font/proxima_nova"
                    android:textStyle="bold"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</RelativeLayout>