<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/loginbackground">

    <RelativeLayout
            android:id="@+id/header_layout"
            android:layout_width="match_parent"
            android:layout_height="400dp">
        <ImageView
                android:id="@+id/img_logo"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:src="@drawable/planelogo"/>
        <TextView
                android:id="@+id/txt_login"
                android:layout_below="@id/img_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign Up"
                android:fontFamily="@font/proxima_nova"
                android:textSize="35sp"
                android:textStyle="bold"
                android:layout_marginStart="30dp"
                android:textColor="@color/textBlack"/>
    </RelativeLayout>

    <LinearLayout
            android:id="@+id/linear_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:layout_below="@id/header_layout">
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputlayout_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <EditText
                        android:id="@+id/et_username"
                        android:layout_width="300dp"
                        android:layout_height="70dp"
                        android:drawableLeft="@drawable/ic_person_white_24dp"
                        android:hint="@string/username_input"
                        android:textAllCaps="false"
                        android:textColorHint="@color/textHintGrey"
                        android:fontFamily="@font/proxima_nova"
                        android:drawablePadding="5dp"
                        android:inputType="textEmailAddress"
                        android:textSize="20sp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputlayout_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <EditText
                        android:id="@+id/et_email"
                        android:layout_width="300dp"
                        android:layout_height="70dp"
                        android:drawableLeft="@drawable/ic_email_white_24dp"
                        android:hint="@string/email_input"
                        android:textAllCaps="false"
                        android:textColorHint="@color/textHintGrey"
                        android:fontFamily="@font/proxima_nova"
                        android:drawablePadding="5dp"
                        android:inputType="textEmailAddress"
                        android:textSize="20sp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputlayout_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                <EditText
                        android:id="@+id/et_password"
                        android:layout_width="300dp"
                        android:layout_height="70dp"
                        android:drawableLeft="@drawable/ic_lock_white_24dp"
                        android:hint="@string/password_input"
                        android:textAllCaps="false"
                        android:textColorHint="@color/textHintGrey"
                        android:fontFamily="@font/proxima_nova"
                        android:drawablePadding="5dp"
                        android:inputType="textPassword"
                        android:textSize="20sp"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="30dp">
                <Button
                        android:id="@+id/btn_signup"
                        android:layout_width="300dp"
                        android:layout_height="50dp"
                        android:background="@drawable/button_login_action"
                        android:text="@string/button_signup"
                        android:textColor="@color/textBlack"
                        android:fontFamily="@font/proxima_nova"
                        android:textStyle="bold"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>